--- a/apps/em1d/CMakeLists.txt
+++ b/apps/em1d/CMakeLists.txt
@@ -1,11 +1,10 @@
 #link_directories (${libgimli_BINARY_DIR}/src) 
 
-set( PROGRAMS polyfit harmfit )
+set( PROGRAMS dc1dinv dc1dsmooth fdem1dinv fdem1dsmooth mrs1dblock mrs1dsmooth
+    mt1dinv mt1dsmooth )
 
 foreach(program ${PROGRAMS})
     add_executable(${program} ${program}.cpp)
     target_link_libraries(${program} gimli)
     #target_link_libraries(polyfit ${libgimli_TARGET_NAME} gimli)
-    install(TARGETS ${program}
-            DESTINATION bin)
 endforeach(program)
