--- a/apps/traveltime/CMakeLists.txt
+++ b/apps/traveltime/CMakeLists.txt
@@ -1,11 +1,13 @@
 #link_directories (${libgimli_BINARY_DIR}/src) 
 
-set( PROGRAMS polyfit harmfit )
+set( PROGRAMS ttinv
+              ttmod
+#ttresolution
+#ttinvoffset 
+)
 
 foreach(program ${PROGRAMS})
     add_executable(${program} ${program}.cpp)
     target_link_libraries(${program} gimli)
     #target_link_libraries(polyfit ${libgimli_TARGET_NAME} gimli)
-    install(TARGETS ${program}
-            DESTINATION bin)
 endforeach(program)
