--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -14,11 +14,15 @@
 
 #define HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP @HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP@
 
+#define BOOST_THREAD_FOUND @Boost_THREAD_FOUND@
+
 #define TRIANGLE_FOUND @TRIANGLE_FOUND@
 
 #define CHOLMOD_FOUND @CHOLMOD_FOUND@
 
 #define USE_IPC @USE_IPC@
+
+#define READPROC_FOUND @READPROC_FOUND@
 
 
 #endif //LIBGIMLI_CONFIG__H
