win32 commit for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,14 @@ include(CheckIncludeFileCXX)
 find_package(Boost 1.48.0 COMPONENTS python system thread REQUIRED)
 if (Boost_INCLUDE_DIR)
     message(STATUS "boost include: ${Boost_INCLUDE_DIR}")
-    check_include_file_cxx(boost/interprocess/managed_shared_memory.hpp HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP)
+    include_directories(${Boost_INCLUDE_DIR})
+	set (CMAKE_REQUIRED_INCLUDES ${Boost_INCLUDE_DIR})
+		check_include_file_cxx(boost/interprocess/managed_shared_memory.hpp HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP
+						   HINT ${Boost_INCLUDE_DIR})
+	if (HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP)
+		message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
+	endif()
+	message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
     option (USE_IPC "Use support for interprocess communication" ON) 
 endif (Boost_INCLUDE_DIR)
 
