--- a/tests/unittest/CMakeLists.txt
+++ b/tests/unittest/CMakeLists.txt
@@ -14,6 +14,11 @@ if (CPPUNIT_FOUND)
     target_link_libraries(gimliUnitTest ${CPPUNIT_LIBRARIES})
 endif (CPPUNIT_FOUND)
 
+if (CHOLMOD_FOUND)
+    target_link_libraries(gimliUnitTest ${CPPUNIT_LIBRARIES})
+endif (CHOLMOD_FOUND)
+
+
 target_link_libraries(gimliUnitTest ${Boost_THREAD_LIBRARY})
 target_link_libraries(gimliUnitTest gimli)
 target_link_libraries(gimliUnitTest ${CHOLMOD_LIBRARIES})
