--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -16,6 +16,8 @@
 
 #define BOOST_THREAD_FOUND @Boost_THREAD_FOUND@
 
+#define BOOST_BIND_FOUND @BOOST_BIND_FOUND@
+
 #define TRIANGLE_FOUND @TRIANGLE_FOUND@
 
 #define CHOLMOD_FOUND @CHOLMOD_FOUND@
