cmake fix mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ IF(WIN32)
 	set(Boost_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../../boost/include)
 endif(WIN32)
 
-find_package(Boost 1.48.0 COMPONENTS python system thread REQUIRED
+find_package(Boost 1.46.0 COMPONENTS python system thread REQUIRED
 			)
 if (Boost_INCLUDE_DIR)
     message(STATUS "boost include: ${Boost_INCLUDE_DIR}")
@@ -50,7 +50,7 @@ if (Boost_INCLUDE_DIR)
 						   HINT ${Boost_INCLUDE_DIR})
 		set(BOOST_BIND_FOUND ON)
 	if (HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP)
-		message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
+		message( STATUS "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
 		option (USE_IPC "Use support for interprocess communication" ON) 
 	else()
 		message( "HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP 0 ${HAVE_BOOST_INTERPROCESS_MANAGED_SHARED_MEMORY_HPP} ${Boost_INCLUDE_DIR}")
